Update BSTsequence.java